--- a/mine.css
+++ b/mine.css
@@ -7,7 +7,7 @@ label {
     border: 1px solid #252525;
     color: #5D5D5D;
     background-color: #252525;
-    
+    box-shadow: 4px 0px 6px rgba(255, 255, 255, 0.02);
     transition: 0.5s;
 
 }
