--- a/mine.css
+++ b/mine.css
@@ -42,6 +42,8 @@ body{
     background-image: url(img/bg.png);
     background-repeat: no-repeat;
     background-attachment: fixed;
+    
+
 }
 
 /* NEW BULMA CLASSES */
@@ -51,3 +53,51 @@ body{
     align-items: center;
   }
   
+.shrink{
+    animation: 0.5s ease-out 0s 1 slideOut;
+}
+.grow{
+    animation: 0.5s ease-in 0s 1 slideIn;
+}
+  @keyframes grow {
+      
+    0%{
+        transform: scale(0,0);
+    }
+    100%{
+        transform: scale(1,1);
+    }
+    
+}
+  @keyframes shrink {
+
+    0%{
+        transform: scale(1,1);
+    }
+    100%{
+        transform: scale(0,0);
+    }
+    
+}
+
+@keyframes slideIn{
+    0% {
+      transform: translateX(+100%);
+      opacity: 0%;
+    }
+    100% {
+      transform: translateX(0);
+      opacity: 100%;
+    }
+}
+
+@keyframes slideOut{
+  0% {
+    transform: translateX(0);
+    opacity: 0%;
+  }
+  100% {
+    transform: translateX(+100%);
+    opacity: 100%;
+  }
+}
