--- a/mine.css
+++ b/mine.css
@@ -45,6 +45,18 @@ body{
     
 
 }
+@media only screen and (min-width: 1000px){
+    body{
+        background-image: url('img/bgdesktop.png');
+        overflow: none;
+        
+    }
+    footer{
+        position: relative;
+        top: 150px;
+        
+    }
+}
 
 /* NEW BULMA CLASSES */
 
