--- a/mine.css
+++ b/mine.css
@@ -74,7 +74,7 @@ body{
 
 @keyframes slideIn{
     0% {
-      transform: translateX(+100%);
+      transform: translateX(-100%);
       opacity: 0%;
     }
     100% {
